# intex-swg-iot

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: Api.hpp.bk  CMakeLists.txt  HttpUtils.hpp.bk  IntexSWG copy.cpp.bk  IntexSWG.cpp  IntexSWG.h  IntexSWG_bus_perfect.cpp.bk  OTAServer.cpp  OTAServer.h  RestServer.cpp  RestServer.h  TM1650.cpp  TM1650.h  app_priv.h  cloud_aws.c  utils.cpp  utils.h
main/WebsiteFiles/: indexOTA.html
main/cloud_cfg/: 6f32c497c2-public.pem.key  device.cert  device.key  deviceid.txt  endpoint.txt
